# mapplauncherd

./: .gitignore  CMakeLists.txt  INSTALL  README  projects.pro
debian/: applauncherd-dev.install  applauncherd-functional-tests.aegis  applauncherd-functional-tests.install  applauncherd-invoker.aegis  applauncherd-launcher.aegis  applauncherd-performance-tests.install  applauncherd-performance-tests.postinst  applauncherd-staging-tests.install  applauncherd-testapps.install  applauncherd-tests.install  applauncherd-testscripts.install  applauncherd.aegis  applauncherd.install  changelog  control  invoker.aegis  rules
meego/0.18.1/: meegotouch-applauncherd-0.18.1.tar.bz2  meegotouch-applauncherd.spec  meegotouch-applauncherd.yaml
old/: ChangeLog  INSTALL  Makefile.am  TODO  aclocal.m4  config.h.in  configure.ac
old/DEBIAN/: conffiles  control  md5sums  postinst  postrm  prerm
old/client/: Makefile.am  app-console.c  app-hildon.c  app.Version
old/debian/: changelog  control  copyright  dh_maemolauncher  maemo-launcher.init  maemo-launcher.install  maemo-launcher.postinst.debhelper  maemo-launcher.postrm.debhelper  rules
old/launcher/: Makefile.am  Makefile.in  comm_dbus.c  comm_dbus.h  comm_msg.c  comm_msg.h  defender.c  invokelib.c  invoker.1.in  invoker.c  launcher.1.in  launcher.c  launcher.pc.in  prog.c  prog.h  report.c  report.h  search.c  search.h  summoner.1.in  summoner.c  test_lib.c  test_lib.h  test_msg.c  test_msg_perf.c
src/: CMakeLists.txt
src/common/: protocol.h
src/invoker/: CMakeLists.txt  invokelib.c  invokelib.h  invoker.c  invoker.pro  report.c  report.h  search.c  search.h
src/launcher/: CMakeLists.txt  appdata.cpp  appdata.h  booster.cpp  booster.h  connection.cpp  connection.h  daemon.cpp  daemon.h  duibooster.cpp  duibooster.h  global.cpp  global.h  launcher.pro  logger.cpp  logger.h  main.cpp  mbooster.cpp  mbooster.h  qtbooster.cpp  qtbooster.h
src/launcher/scripts/: applauncherd  launcher
src/test/: test.cpp  test.pro
test/helloworld/: helloworld.cpp  helloworld.cpp~
tests/: CMakeLists.txt
tests/Staging/: CMakeLists.txt  tests.xml
tests/TestApps/creds/: creds_test.cpp
tests/TestApps/helloworld/: CMakeLists.txt  helloworld.cpp
tests/TestApps/helloworld/scripts/: create_links.cmake
tests/TestApps/testapp/: main.cpp
tests/TestApps/testcalc/: CMakeLists.txt  calc.pro  calc.pro~
tests/TestApps/testcalc/src/: CMakeLists.txt  meegotouch.cmake  src.pro
tests/TestApps/testcalc/src/basiccalc/: basiccalc.cpp  basiccalc.h  calcconstants.h  calcretranslator.cpp  calcretranslator.h  calculationhistory.cpp  calculationhistory.h  calculationitem.h  main.cpp  savedcalculations.cpp  savedcalculations.h
tests/TestApps/testcalc/src/canvas/: canvaspage.cpp  canvaspage.h
tests/TestApps/testcalc/src/coreinterface/: calculationstack.cpp  calculationstack.h  coreinterface.cpp  coreinterface.h
tests/TestApps/testcalc/src/dom/: calcdomreader.cpp  calcdomreader.h  calcdomwriter.cpp  calcdomwriter.h
tests/TestApps/testcalc/src/utility/: calcutilities.cpp  calcutilities.h
tests/TestApps/testcalc/src/widgets/: calculationhistoryitem.cpp  calculationhistoryitem.h  calculationhistoryitemmodel.h  calculationhistoryitemstyle.h  calculationhistoryitemview.cpp  calculationhistoryitemview.h  calculationhistoryitemview_p.h  calculationlinewidget.cpp  calculationlinewidget.h  calculationlinewidgetmodel.h  calculationlinewidgetstyle.h  calculationlinewidgetview.cpp  calculationlinewidgetview.h  calculationlinewidgetview_p.h  savedcalculationitem.cpp  savedcalculationitem.h  savedcalculationitemmodel.h  savedcalculationitemstyle.h  savedcalculationitemview.cpp  savedcalculationitemview.h  savedcalculationitemview_p.h
tests/TestApps/testcalc/themes/: testcalc.conf
tests/TestApps/testcalc/themes/style/: testcalc.css  testcalc.css~
tests/TestApps/testcalc/translations/: CMakeLists.txt  translations.pro
tests/TestScripts/: CMakeLists.txt  check_pipes.py  tc_theming.rb  test-func-launcher.py  ts_prestartapp.rb
tests/art-tests/: tests.xml
tests/bug-tests/: tests.xml
tests/creds/: CMakeLists.txt
tests/functests/: CMakeLists.txt  check_pipes.py  test-func-launcher.py  tests.xml  ts_prestartapp.rb
tests/functests/helloworld/: CMakeLists.txt  helloworld.cpp
tests/helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.pro
tests/helloworld/scripts/: create_links.cmake  helloworld
tests/perftests/: CMakeLists.txt  test-perf-launcher.py  test-perf-mbooster.py  tests.xml
tests/perftests/hello_no_launcher/: CMakeLists.txt  main.cpp
tests/perftests/helloworld/scripts/: helloworld  qhelloworld
tests/perftests/startup-perftest/: README  startup-perftest.pro
tests/perftests/startup-perftest/testapp/: CMakeLists.txt  main.cpp
tests/perftests/waitforwindow/: CMakeLists.txt  waitforwindow.c
tests/prestartapp/: CMakeLists.txt  README.txt  com.nokia.prestartapp.service  prestartapp.cpp
tests/unittests/: CMakeLists.txt  tests.xml
tests/unittests/ut_booster/: CMakeLists.txt  ut_booster.cpp  ut_booster.h
tests/unittests/ut_connection/: CMakeLists.txt  ut_connection.cpp  ut_connection.h
tests/unittests/ut_daemon/: CMakeLists.txt  ut_daemon.cpp  ut_daemon.h
tests/unittests/ut_duibooster/: CMakeLists.txt  ut_duibooster.cpp  ut_duibooster.h
tests/unittests/ut_mbooster/: CMakeLists.txt  ut_mbooster.cpp  ut_mbooster.h
tests/unittests/ut_qtbooster/: CMakeLists.txt  ut_qtbooster.cpp  ut_qtbooster.h
