install(FILES test-func-launcher.py DESTINATION /usr/share/applauncherd-testscripts)
install(FILES check_pipes.py DESTINATION /usr/share/applauncherd-testscripts)
install(FILES test-perf-mbooster.py DESTINATION /usr/share/applauncherd-testscripts)
install(PROGRAMS ts_prestartapp.rb DESTINATION /usr/share/applauncherd-testscripts)

