install(FILES test-func-launcher.py DESTINATION /usr/share/applauncherd-functional-tests)
install(FILES check_pipes.py DESTINATION /usr/share/applauncherd-functional-tests)
install(FILES tests.xml DESTINATION /usr/share/applauncherd-functional-tests)
install(PROGRAMS ts_prestartapp.rb DESTINATION /usr/share/applauncherd-functional-tests)

